cmake_minimum_required(VERSION 3.27)
project(war_ReaperCord C)

set(CMAKE_C_STANDARD 11)

add_executable(war_ReaperCord
        war-iniciante.c
        territorio.c
        jogador.c
        utils.c
        territorio.c
        territorio.h
        jogador.c
        jogador.h
        utils.c
        utils.h
        territorio.c
        jogador.c
        utils.c
        utils.h
        jogador.c
        territorio.c)